--- a/test/Makefile
+++ b/test/Makefile
@@ -9,15 +9,15 @@ TARGETS = mq_client mq_server
 INCLUDES = -I /usr/include -I..
 OBJS = ../mqueue.o
 HEADERS = ../mqueue.h
-CFLAGS = -O2 -g -Wall -fmessage-length=0 $(INCLUDES) $(LIBDIRS) $(LIBS) $(OBJS)
+CFLAGS = -O2 -g -Wall -fmessage-length=0 $(INCLUDES) $(LIBDIRS) $(LIBS)
 
-all: $(TARGETS)
+all: $(OBJS) $(TARGETS)
 
 mq_client: mq_client.c $(HEADERS) $(OBJS)
-	$(CC) $(CFLAGS) $< -o $@
+	$(CC) $(CFLAGS) $< $(OBJS) -o $@
 
 mq_server: mq_server.c $(HEADERS) $(OBJS)
-	$(CC) $(CFLAGS) $< -o $@
+	$(CC) $(CFLAGS) $< $(OBJS) -o $@
 
 run:
 	./mq_server & ./mq_client
